# greynir-service

./: .editorconfig  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
app/: __init__.py  config.py  db.py  server.py  utils.py
app/views/: __init__.py  api.py
